# FreeRTOS_Simulated_Weather

./: .gitignore  CMakeLists.txt  README.md
config/: freeRTOSConfig.h
include/: globals.h  isr_simulated.h  tasks_comm.h  tasks_processing.h  tasks_sensor.h  tasks_watchdog.h
src/: isr_simulated.c  main.c  tasks_comm.c  tasks_processing.c  tasks_sensor.c  tasks_watchdog.c
